--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-liste/termin-liste.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-liste/termin-liste.component.scss
@@ -1,9 +1,12 @@
-.ion-fab-button{
-  margin-right: 20px;
-  margin-bottom: 20px;
+.padding-lr{
+  --padding-start: var(--ion-padding, 12px);
+  --padding-end: var(--ion-padding, 12px);
+  --padding-top: var(--ion-padding, 0px);
+  --padding-bottom: var(--ion-padding, 0px);
+  padding-inline-start: var(--ion-padding, 12px);
+  padding-inline-end: var(--ion-padding, 12px);
 }
 
-ion-searchbar{
-  position: sticky;
+ion-label {
+  text-transform: none;
 }
-
