--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.scss
@@ -1,9 +1,9 @@
-.nicht-angenommen{
-  color: #b9ae49
+.default-color{
+  color: #6aa0ff;
 }
 
-.past{
-  color: #717171;
+.nicht-angenommen{
+  color: #b9ae49
 }
 
 .abgesagt{
