more work on frontend termin overview

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/current-termin-liste/current-termin-liste.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/current-termin-liste/current-termin-liste.component.scss
@@ -1,6 +1,6 @@
 .ion-fab-button{
   margin-right: 20px;
-  margin-bottom: 70px;
+  margin-bottom: 20px;
 }
 
 ion-searchbar{
@@ -14,4 +14,6 @@ ion-searchbar{
   --padding-bottom: var(--ion-padding, 0px);
   padding-inline-start: var(--ion-padding, 0px);
   padding-inline-end: var(--ion-padding, 0px);
+
+  height: calc(100% - 48px);
 }
