--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.html
@@ -25,7 +25,7 @@
         Teilgenommen: {{istAnwesend ? 'Ja' : 'Nein'}}
       </ng-container>
       <ng-container *ngIf="highAuth">
-        Rückmeldungen: <span>{{positiveResponse}}</span><br>
+        Zugesagt: <span>{{positiveResponse}}</span><br>
         Abgesagt: {{negativeResponse}} <br>
         Nicht Zurückgemeldet: {{noResponse}}
       </ng-container>
