--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-overview/termin-overview.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-overview/termin-overview.component.html
@@ -1,32 +1,22 @@
-<ion-content class="padding-lr">
-  <ng-container *ngIf="displayedData; else loading">
-    <!-- <pre>{{displayedData | json}}</pre> -->
-    <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
-      <ion-refresher-content></ion-refresher-content>
-    </ion-refresher>
-    <ion-datetime presentation="date" [value]="today | date : 'YYYY-MM-dd'" [highlightedDates]="highlightedDates"></ion-datetime>
+<div>
+  <!-- <pre>{{data | json}}</pre> -->
+  <ion-datetime presentation="date" [value]="currentDate | date : 'YYYY-MM-dd'" [highlightedDates]="highlightedDates"></ion-datetime>
     
     <ion-list>
-      <app-termin-item *ngFor="let termin of displayedData" [terminId]="termin.terminId"
-        [terminStatus]="termin.terminStatus | dropdown : terminStatusDropdownValues" [terminName]="termin.name"
-        [terminResponse]="termin.zugesagt | dropdown : responseDropdownValues"
-        [terminArt]="termin.terminArt | dropdown : terminArtenDropdownValues" [terminStartTime]="termin.startZeit"
+      <app-termin-item *ngFor="let termin of data.terminData" [terminId]="termin.terminId"
+        [terminStatus]="termin.terminStatus | dropdown : data.terminStatusDropdownValues" [terminName]="termin.name"
+        [terminResponse]="termin.zugesagt | dropdown : data.responseDropdownValues"
+        [terminArt]="termin.terminArt | dropdown : data.terminArtenDropdownValues" [terminStartTime]="termin.startZeit"
         [terminEndTime]="termin.endZeit" [istAnwesend]="termin.istAnwesend" [highAuth]="false"
         (openTermin)="openTermin(termin.terminId)">
       </app-termin-item>
-      <app-termin-item *ngFor="let termin of displayedData" [terminId]="termin.terminId"
-        [terminStatus]="termin.terminStatus | dropdown : terminStatusDropdownValues" [terminName]="termin.name"
-        [terminResponse]="termin.zugesagt | dropdown : responseDropdownValues"
-        [terminArt]="termin.terminArt | dropdown : terminArtenDropdownValues" [terminStartTime]="termin.startZeit"
+      <app-termin-item *ngFor="let termin of data.terminData" [terminId]="termin.terminId"
+        [terminStatus]="termin.terminStatus | dropdown : data.terminStatusDropdownValues" [terminName]="termin.name"
+        [terminResponse]="termin.zugesagt | dropdown : data.responseDropdownValues"
+        [terminArt]="termin.terminArt | dropdown : data.terminArtenDropdownValues" [terminStartTime]="termin.startZeit"
         [terminEndTime]="termin.endZeit" [istAnwesend]="termin.istAnwesend" [highAuth]="false"
         (openTermin)="openTermin(termin.terminId)">
       </app-termin-item>
     </ion-list>
-  </ng-container>
 
-  <ng-template #loading>
-    <app-loader></app-loader>
-  </ng-template>
-</ion-content>
-
-
+</div>
