--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-liste/termin-liste.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-liste/termin-liste.component.html
@@ -20,7 +20,7 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-  <ion-segment value="default" #segment>
+  <ion-segment [value]="defaultSegment" #segment>
     <ion-segment-button value="overview">
       <ion-label>Übersicht</ion-label>
     </ion-segment-button>
