--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-details/termin-details.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-details/termin-details.component.scss
@@ -1,3 +1,48 @@
 .back-btn{
   margin-bottom: 16px;
 }
+
+.ion-card-subtitle{
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.border-bottom{
+  padding: 8px 0px;
+  border-bottom: 1px solid #ffffff1c;
+}
+
+.response-div{
+  position: relative;
+  padding: 8px 0px;
+}
+
+.user-connected{
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  width: 6px;
+  height: 6px;
+  border-radius: 100%;
+  background-color: yellow;
+}
+
+.color-green{
+  background-color: rgb(31, 253, 2);
+}
+
+.color-red{
+  background-color: rgb(255, 0, 0);
+}
+
+.termin-anfrage{
+  color: #dbdb21;
+}
+
+.termin-abgesagt{
+  color: red;
+}
+
+.comment-div{
+  margin-top: 8px;
+}
