more frontend termin work

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-details/termin-details.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-details/termin-details.component.html
@@ -95,8 +95,8 @@
         </div>
       </ion-card-content>
 
-      <ion-button fill="clear" (click)="openUpdateModal()">Bearbeiten</ion-button>
-      <ion-button fill="clear" (click)="openResponseAlert()">Rückmeldung geben</ion-button>
+      <ion-button fill="clear" (click)="openUpdateModal(data)">Bearbeiten</ion-button>
+      <ion-button fill="clear" (click)="openResponseModal()">Rückmeldung geben</ion-button>
     </ion-card>
 
   </ng-container>
