--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/update-termin-modal/update-termin-modal.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/update-termin-modal/update-termin-modal.component.html
@@ -3,20 +3,100 @@
     <ion-buttons slot="start">
       <ion-button (click)="cancel()">Zurück</ion-button>
     </ion-buttons>
-    <ion-title>Bearbeite Termin</ion-title>
+    <ion-title>Neuer Termin</ion-title>
     <ion-buttons slot="end">
-      <!-- <ion-button (click)="confirm()" [strong]="true"
-        [disabled]="!formGroup.dirty || formGroup.invalid">Erstellen</ion-button> -->
+      <ion-button (click)="confirm()" [strong]="true"
+        [disabled]="!formGroup.dirty || formGroup.invalid">Erstellen</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <!-- <ng-container *ngIf="data$ | async as data; else loading">
+  <ng-container *ngIf="dataTermin; else loading">
     <pre>{{formGroup.value | json}}</pre>
 
-    <form [formGroup]="formGroup"></form>
+    <form [formGroup]="formGroup">
+      <ion-list>
+        <ion-list-header color="tertiary">
+          Termin Info
+        </ion-list-header>
+        <ion-item>
+          <ion-input formControlName="terminName" labelPlacement="stacked" label="Termin Name"
+            placeholder="Termin Name"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-select label="Termin Art" label-placement="stacked" formControlName="terminArt">
+            <ion-select-option *ngFor="let terminArt of dataTermin.terminArtenDropdownValues"
+              [value]="terminArt.value">{{terminArt.text}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+          <ion-select label="Termin Status" label-placement="stacked" formControlName="terminStatus">
+            <ion-select-option *ngFor="let terminStatus of dataTermin.terminStatusDropdownValues"
+              [value]="terminStatus.value">{{terminStatus.text}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+          <ion-input formControlName="terminDate" type="date" labelPlacement="stacked" label="Datum" placeholder="Datum"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input formControlName="startZeit" type="time" labelPlacement="stacked" label="Startzeit" placeholder="Startzeit"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input formControlName="endZeit" type="time" labelPlacement="stacked" label="Endzeit" placeholder="Endzeit"></ion-input>
+        </ion-item>
+        <!-- <ion-item>
+          <ion-select label="Noten" label-placement="stacked" formControlName="noten" [multiple]="true">
+            <ion-select-option *ngFor="let noten of data.notenDropdown"
+              [value]="noten.value">{{noten.text}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+          <ion-select label="Uniform" label-placement="stacked" formControlName="uniform" [multiple]="true">
+            <ion-select-option *ngFor="let uniform of data.uniformDropdown"
+              [value]="uniform.value">{{uniform.text}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+          <ion-checkbox labelPlacement="end" (click)="clickedCheckbox()">Termin nur für bestimmte Mitglieder?</ion-checkbox>
+        </ion-item>
+        <ion-item *ngIf="terminOnlyForSpecificMembers">
+          <ion-select label="Orchestermitglieder für Termin" label-placement="stacked" formControlName="orchestermitgliedIds" [multiple]="true">
+            <ion-select-option *ngFor="let orchesterMitglied of data.orchesterMitgliederDropdown"
+              [value]="orchesterMitglied.value">{{orchesterMitglied.text}}</ion-select-option>
+          </ion-select>
+        </ion-item> -->
+      </ion-list>
 
-  </ng-container> -->
+      <ion-list class="mg-top">
+        <ion-list-header color="tertiary">
+          <ion-label>Treffpunkt</ion-label>
+        </ion-list-header>
+        <ion-item>
+          <ion-input formControlName="straße" labelPlacement="stacked" label="Straße" placeholder="Straße"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input formControlName="hausnummer" labelPlacement="stacked" label="Hausnummer"
+            placeholder="Hausnummer"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input formControlName="postleitzahl" labelPlacement="stacked" label="Postleitzahl"
+            placeholder="Postleitzahl"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input formControlName="stadt" labelPlacement="stacked" label="Stadt" placeholder="Stadt"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input formControlName="zusatz" labelPlacement="stacked" label="Zusatz" placeholder="Zusatz"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input type="number" formControlName="latitude" labelPlacement="stacked" label="Latitude" placeholder="Latitude"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input type="number" formControlName="longitude" labelPlacement="stacked" label="Longitude" placeholder="Longitude"></ion-input>
+        </ion-item>
+      </ion-list>
+    </form>
+  </ng-container>
 
   <ng-template #loading>
     <app-loader></app-loader>
